tests/negative/test_expr_asgn_cn_raw.orb
fnc main () () {
    sym (x:(raw cn) ());
    = x ();
};